--- a/.env.example
+++ b/.env.example
@@ -194,7 +194,7 @@ STRIPE_ENABLED="False"
 # FRONTEND_URL: Base URL of your frontend application.
 # - Used for CORS configuration, email links, redirects
 # - Include protocol (https:// or http://)
-# - Example: https://duedoom.com
+# - Example: https://template.com
 FRONTEND_URL=https://your-frontend-domain.com
 
 # API_URL: Base URL of this Django API backend.
